results/SVCOMP/specgen/log-fcmpx_dcmpx1-2024_02_25_18_19_44.txt
class Main {
  //@ requires f == 2.5f;
  //@ ensures \result <==> f == 2.5f;
  //@ ensures \result <==> f < 3.0f;
  //@ ensures \result <==> f > 2.0f;
  //@ requires d == 2.5;
  //@ ensures \result <==> d == 2.5;
  //@ ensures \result <==> d < 3.0;
  //@ ensures \result <==> d > 2.0;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:2: error: cannot find symbol
  //@ requires f == 2.5f;
               ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result <==> f == 2.5f;
               ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: cannot find symbol
  //@ ensures \result <==> f == 2.5f;
                           ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result <==> f < 3.0f;
               ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:4: error: cannot find symbol
  //@ ensures \result <==> f < 3.0f;
                           ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:5: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result <==> f > 2.0f;
               ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:5: error: cannot find symbol
  //@ ensures \result <==> f > 2.0f;
                           ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:6: error: cannot find symbol
  //@ requires d == 2.5;
               ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:7: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result <==> d == 2.5;
               ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:7: error: cannot find symbol
  //@ ensures \result <==> d == 2.5;
                           ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:8: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result <==> d < 3.0;
               ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:8: error: cannot find symbol
  //@ ensures \result <==> d < 3.0;
                           ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:9: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result <==> d > 2.0;
               ^
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:9: error: cannot find symbol
  //@ ensures \result <==> d > 2.0;
                           ^
  symbol:   variable d
  location: class Main
14 errors

class Main {
  //@ requires f == 2.5f;
  //@ ensures f == 2.5f;
  //@ ensures f < 3.0f;
  //@ ensures f > 2.0f;
  //@ requires d == 2.5;
  //@ ensures d == 2.5;
  //@ ensures d < 3.0;
  //@ ensures d > 2.0;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:2: error: cannot find symbol
  //@ requires f == 2.5f;
               ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: cannot find symbol
  //@ ensures f == 2.5f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:4: error: cannot find symbol
  //@ ensures f < 3.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:5: error: cannot find symbol
  //@ ensures f > 2.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:6: error: cannot find symbol
  //@ requires d == 2.5;
               ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:7: error: cannot find symbol
  //@ ensures d == 2.5;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:8: error: cannot find symbol
  //@ ensures d < 3.0;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:9: error: cannot find symbol
  //@ ensures d > 2.0;
              ^
  symbol:   variable d
  location: class Main
8 errors

class Main {
  //@ requires f == 2.5f;
  //@ ensures f == 2.5f;
  //@ ensures f < 3.0f;
  //@ ensures f > 2.0f;
  //@ requires d == 2.5;
  //@ ensures d == 2.5;
  //@ ensures d < 3.0;
  //@ ensures d > 2.0;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:2: error: cannot find symbol
  //@ requires f == 2.5f;
               ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: cannot find symbol
  //@ ensures f == 2.5f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:4: error: cannot find symbol
  //@ ensures f < 3.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:5: error: cannot find symbol
  //@ ensures f > 2.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:6: error: cannot find symbol
  //@ requires d == 2.5;
               ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:7: error: cannot find symbol
  //@ ensures d == 2.5;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:8: error: cannot find symbol
  //@ ensures d < 3.0;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:9: error: cannot find symbol
  //@ ensures d > 2.0;
              ^
  symbol:   variable d
  location: class Main
8 errors

class Main {
  //@ requires true;
  //@ ensures f == 2.5f;
  //@ ensures f < 3.0f;
  //@ ensures f > 2.0f;
  //@ requires true;
  //@ ensures d == 2.5;
  //@ ensures d < 3.0;
  //@ ensures d > 2.0;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: cannot find symbol
  //@ ensures f == 2.5f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:4: error: cannot find symbol
  //@ ensures f < 3.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:5: error: cannot find symbol
  //@ ensures f > 2.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:7: error: cannot find symbol
  //@ ensures d == 2.5;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:8: error: cannot find symbol
  //@ ensures d < 3.0;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:9: error: cannot find symbol
  //@ ensures d > 2.0;
              ^
  symbol:   variable d
  location: class Main
6 errors

class Main {
  //@ requires true;
  //@ ensures f == 2.5f;
  //@ ensures f < 3.0f;
  //@ ensures f > 2.0f;
  //@ requires true;
  //@ ensures d == 2.5;
  //@ ensures d < 3.0;
  //@ ensures d > 2.0;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: cannot find symbol
  //@ ensures f == 2.5f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:4: error: cannot find symbol
  //@ ensures f < 3.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:5: error: cannot find symbol
  //@ ensures f > 2.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:7: error: cannot find symbol
  //@ ensures d == 2.5;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:8: error: cannot find symbol
  //@ ensures d < 3.0;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:9: error: cannot find symbol
  //@ ensures d > 2.0;
              ^
  symbol:   variable d
  location: class Main
6 errors

class Main {
  //@ requires true;
  //@ ensures true;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}

